--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="menu_option1">Opción 1</string>
     <string name="menu_option2">Opción 2</string>
     <string name="menu_option3">Opción 3</string>
+    <string name="menu_sub1">Submenú 1</string>
+    <string name="menu_sub_option1">Opción submenú 1</string>
 </resources>
