--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <string name="menu_option3">Opción 3</string>
     <string name="menu_sub1">Submenú 1</string>
     <string name="menu_sub_option1">Opción submenú 1</string>
+    <string name="menu_context_edit">Editar</string>
+    <string name="menu_context_share">Compartir</string>
+    <string name="alert_title">Alerta</string>
+    <string name="alert_message">Mensaje de alerta</string>
+    <string name="btn_alert">Mostrar alert</string>
 </resources>
